boreal/tests/assets/invalid_files/parsing/regex_range_invalid.yar
rule a {
    strings:
        $a = /a{5,4}/
    condition:
        $a
}
